Bug 1870641 - Include size of subfolders for displayed size of collapsed folder. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D196730

--HG--
extra : amend_source : b29a93bbb875f76843b40ebbeb45af9a7d8d2a31

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -636,6 +636,10 @@ body {
   font-weight: bold;
   color: var(--layout-color-3);
   margin-inline-end: 6px;
+
+  &:empty {
+    display: none;
+  }
 }
 
 /* Message browser pane. */
